--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
             <h2 id="contacts" class="header-section">Our Team</h2>
                 <ul class="team-list">
                     <li class="header-list">                        
-                        <img src="./images/team/mark.jpg" alt="" width="264" height="260">
+                        <img 
+                            srcset="./images/team/mark.jpg 1x, ./images/team/mark@2x.jpg 2x" 
+                            src="./images/team/mark.jpg" alt="" width="264" height="260">
                         <div class="team-member-desc">
                             <h3 class="header-list-title">Mark Guerrero</h3>
                             <p>Product Designer</p>
@@ -185,7 +187,9 @@
                         </div>
                     </li>
                     <li class="header-list">               
-                        <img src="./images/team/tom.jpg" alt="" width="264" height="260">
+                        <img 
+                            srcset="./images/team/tom.jpg 1x, ./images/team/tom@2x.jpg 2x"
+                            src="./images/team/tom.jpg" alt="" width="264" height="260">
                         <div class="team-member-desc">
                             <h3 class="header-list-title">Tom Ford</h3>
                             <p>Frontend Developer</p>
@@ -227,7 +231,9 @@
                         </div>
                     </li>
                     <li class="header-list">
-                        <img src="./images/team/camila.jpg" alt="" width="264" height="260">
+                        <img 
+                            srcset="./images/team/camila.jpg 1x, ./images/team/camila@2x.jpg 2x"
+                            src="./images/team/camila.jpg" alt="" width="264" height="260">
                         <div class="team-member-desc">
                             <h3 class="header-list-title">Camila Garcia</h3>
                             <p>Marketing</p>
@@ -269,7 +275,9 @@
                         </div>
                     </li>
                     <li class="header-list">
-                        <img src="./images/team/daniel.jpg" alt="" width="264" height="260">
+                        <img 
+                            srcset="./images/team/daniel.jpg 1x, ./images/team/daniel@2x.jpg 2x"
+                            src="./images/team/daniel.jpg" alt="" width="264" height="260">
                             <div class="team-member-desc">
                             <h3 class="header-list-title">Daniel Wilson</h3>
                             <p>UI Designer</p>
@@ -361,7 +369,7 @@
         <div class="container">
             <div class="footer-navigation">
                 <a class="logo" href="./index.html"><span class="logospan">WEB</span><span class="logospanbottom"> STUDIO</span></a>
-                <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+                <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
             </div>
             <div class="social-footer">
                 <p class="social-media-text">Social media</p>
